@@ -60,6 +60,9 @@ protected:
     virtual bool MSWAllowsNone() const { return HasFlag(wxDP_ALLOWNONE); }
     virtual bool MSWOnDateTimeChange(const tagNMDATETIMECHANGE& dtch);
 
+private:
+    wxDateTime MSWGetControlValue() const;
+
     wxDECLARE_DYNAMIC_CLASS_NO_COPY(wxDatePickerCtrl);
 };
 
